@@ -1,5 +1,9 @@
 2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>
 
+	* m4/ls-mntd-fs.m4: Update to serial #26.
+
+2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>
+
 	* m4/fsusage.m4: Update to serial #22.
 
 2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>
